--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,6 +51,7 @@ body {
         }
 
         .descriptionCarte {
+            margin-top: 4%;
             font-weight: 400;
             font-size: 20px;
             text-align: center;
