--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,15 +22,16 @@ body {
 
     .carte {
         margin-top: 8%;
+        margin-bottom: 8%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
         width: 650px;
-        height: 700px;
+        height: 800px;
         background: rgba(187, 27, 27, 0.3);
        
-        border: 1px solid #fff;
+        
         -webkit-box-shadow: 0px 0px 17px 6px rgba(255, 255, 255, 0.56);
         box-shadow: 0px 0px 17px 6px rgba(255, 255, 255, 0.56);
         border-radius: 30px;
@@ -51,12 +52,18 @@ body {
         }
 
         .descriptionCarte {
-            margin-top: 4%;
+            margin-top: 2%;
             font-weight: 400;
             font-size: 20px;
             text-align: center;
             color: #fff;
         }
+    }
+}
+
+.descriptionCarte {
+    .descriptionCompetences {
+        margin-top: 5%;
     }
 }
 
