--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,8 +10,12 @@
 }
 
 body {
-    background: url("./media/back.jpg");
+    background-image: url("./media/back.jpg");
     background-size: cover;
+   background-position: center;
+   background-repeat: no-repeat;
+   min-height: 200vh;
+    
 }
 
 .ecran {
@@ -28,31 +32,35 @@ body {
         align-items: center;
         justify-content: space-around;
         width: 650px;
-        height: 800px;
+        height: 900px;
         background: rgba(187, 27, 27, 0.3);
        
         
-        -webkit-box-shadow: 0px 0px 17px 6px rgba(255, 255, 255, 0.56);
-        box-shadow: 0px 0px 17px 6px rgba(255, 255, 255, 0.56);
+        -webkit-box-shadow: 0px 0px 50px 25px rgba(51,51,51,0.47); 
+box-shadow: 0px 0px 50px 25px rgba(51,51,51,0.47);
         border-radius: 30px;
         backdrop-filter: blur(5px);
 
         .photoCarte {
+            margin-top: 8%;
             width: 320px;
             height: 320px;
             border-radius: 50%;
             object-fit: cover;
             backdrop-filter: none;
+            filter: grayscale(100);
         }
 
         .titreCarte {
             font-size: 30px;
             color: #fff;
             backdrop-filter: none;
+            margin-top: 2%;
         }
 
         .descriptionCarte {
             margin-top: 2%;
+            margin-bottom: 4%;
             font-weight: 400;
             font-size: 20px;
             text-align: center;
@@ -68,17 +76,36 @@ body {
 }
 
 .liensCarte {
-    .liensNav {
-        width: 100px;
-        height: 100px;
+    margin-bottom: 2%;
+}
+
+.liensContact {
+    margin-bottom: 25px;
+    padding: 2% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .boutonEmail {
+        
+    text-align: center;
+    width: 260px;
+    margin-bottom: 2%;
+    border-radius: 10px;
+    border: 2px solid #ffff;
+    padding: 9% 7%;
+   
+    color: #ffff;
+    font-weight: 500;
+    font-size: 22px;
     }
 }
 
-.boutonEmail {
-    border-radius: 20px;
-    padding: 2% 5%;
-    background: #fff;
-    color: black;
-    font-weight: 500;
-    font-size: 22px;
-}
+
+.middle-line {
+    border-left: 1px solid #fff;
+    height: 100%;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
