--- a/style.css
+++ b/style.css
@@ -9,8 +9,11 @@
 }
 
 body {
-  background: url("./media/back.jpg");
+  background-image: url("./media/back.jpg");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 200vh;
 }
 
 .ecran {
@@ -27,27 +30,31 @@ body {
   align-items: center;
   justify-content: space-around;
   width: 650px;
-  height: 800px;
+  height: 900px;
   background: rgba(187, 27, 27, 0.3);
-  -webkit-box-shadow: 0px 0px 17px 6px rgba(255, 255, 255, 0.56);
-  box-shadow: 0px 0px 17px 6px rgba(255, 255, 255, 0.56);
+  -webkit-box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.47);
+  box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.47);
   border-radius: 30px;
   backdrop-filter: blur(5px);
 }
 .ecran .carte .photoCarte {
+  margin-top: 8%;
   width: 320px;
   height: 320px;
   border-radius: 50%;
   object-fit: cover;
   backdrop-filter: none;
+  filter: grayscale(100);
 }
 .ecran .carte .titreCarte {
   font-size: 30px;
   color: #fff;
   backdrop-filter: none;
+  margin-top: 2%;
 }
 .ecran .carte .descriptionCarte {
   margin-top: 2%;
+  margin-bottom: 4%;
   font-weight: 400;
   font-size: 20px;
   text-align: center;
@@ -58,18 +65,36 @@ body {
   margin-top: 5%;
 }
 
-.liensCarte .liensNav {
-  width: 100px;
-  height: 100px;
+.liensCarte {
+  margin-bottom: 2%;
 }
 
-.boutonEmail {
-  border-radius: 20px;
-  padding: 2% 5%;
-  background: #fff;
-  color: black;
+.liensContact {
+  margin-bottom: 25px;
+  padding: 2% 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.liensContact .boutonEmail {
+  text-align: center;
+  width: 260px;
+  margin-bottom: 2%;
+  border-radius: 10px;
+  border: 2px solid white;
+  padding: 9% 7%;
+  color: white;
   font-weight: 500;
   font-size: 22px;
+}
+
+.middle-line {
+  border-left: 1px solid #fff;
+  height: 100%;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /*# sourceMappingURL=style.css.map */
