--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,10 +12,10 @@
 body {
     background-image: url("./media/back.jpg");
     background-size: cover;
-   background-position: center;
-   background-repeat: no-repeat;
-   min-height: 200vh;
-    
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 200vh;
+
 }
 
 .ecran {
@@ -34,10 +34,10 @@ body {
         width: 650px;
         height: 900px;
         background: rgba(187, 27, 27, 0.3);
-       
-        
-        -webkit-box-shadow: 0px 0px 50px 25px rgba(51,51,51,0.47); 
-box-shadow: 0px 0px 50px 25px rgba(51,51,51,0.47);
+
+
+        -webkit-box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.47);
+        box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.47);
         border-radius: 30px;
         backdrop-filter: blur(5px);
 
@@ -85,27 +85,92 @@ box-shadow: 0px 0px 50px 25px rgba(51,51,51,0.47);
     display: flex;
     flex-direction: column;
     align-items: center;
+
     .boutonEmail {
-        
-    text-align: center;
-    width: 260px;
-    margin-bottom: 2%;
-    border-radius: 10px;
-    border: 2px solid #ffff;
-    padding: 9% 7%;
-   
-    color: #ffff;
-    font-weight: 500;
-    font-size: 22px;
+
+        text-align: center;
+        width: 260px;
+        margin-bottom: 2%;
+        border-radius: 10px;
+        border: 2px solid #ffff;
+        padding: 9% 7%;
+
+        color: #ffff;
+        font-weight: 500;
+        font-size: 22px;
     }
 }
 
 
 .middle-line {
     border-left: 1px solid #fff;
-    height: 100%;
+    height: 87%;
     position: absolute;
-    top: 100%;
+    top: 103%;
     left: 50%;
     transform: translateX(-50%);
-  }
+    box-shadow: 0px 0px 50px 25px rgb(187, 27, 27, 0.2);
+}
+
+main {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.parentProjet {
+    width: 45%;
+
+    .titreProjets {
+        color: #fff;
+        text-align: center;
+        padding: 0 2% 0 2%;
+        line-height: 3;
+        font-size: 27px;
+    }
+
+    .projet {
+        border-radius: 20px;
+        width: 100%;
+        padding: 3%;
+        margin-top: 2%;
+        display: flex;
+        align-items: center;
+        margin-bottom: 5%;
+        height: 300px;
+        background: rgba(187, 27, 27, 0.4);
+        -webkit-box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.3);
+        box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.3);
+        text-align: center;
+        color: #fff;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+
+}
+
+.projet {
+    .titreProjet {
+        padding-bottom: 2%;
+    }
+
+    .dateProjet {
+        padding-bottom: 2%;
+    }
+
+    .descriptionProjet {
+        padding-left: 5%;
+        padding-right: 5%;
+        padding-bottom: 2%;
+
+    }
+
+    .lienProjet {
+        padding: 1% 3%;
+        background-color: black;
+        width: 173px;
+        color: #fff;
+        border-radius: 10px;
+        border: 2px solid white;
+    }
+}
