--- a/style.css
+++ b/style.css
@@ -90,11 +90,65 @@ body {
 
 .middle-line {
   border-left: 1px solid #fff;
-  height: 100%;
+  height: 87%;
   position: absolute;
-  top: 100%;
+  top: 103%;
   left: 50%;
   transform: translateX(-50%);
+  box-shadow: 0px 0px 50px 25px rgba(187, 27, 27, 0.2);
+}
+
+main {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.parentProjet {
+  width: 45%;
+}
+.parentProjet .titreProjets {
+  color: #fff;
+  text-align: center;
+  padding: 0 2% 0 2%;
+  line-height: 3;
+  font-size: 27px;
+}
+.parentProjet .projet {
+  border-radius: 20px;
+  width: 100%;
+  padding: 3%;
+  margin-top: 2%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 5%;
+  height: 300px;
+  background: rgba(187, 27, 27, 0.4);
+  -webkit-box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.3);
+  box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.3);
+  text-align: center;
+  color: #fff;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.projet .titreProjet {
+  padding-bottom: 2%;
+}
+.projet .dateProjet {
+  padding-bottom: 2%;
+}
+.projet .descriptionProjet {
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 2%;
+}
+.projet .lienProjet {
+  padding: 1% 3%;
+  background-color: black;
+  width: 173px;
+  color: #fff;
+  border-radius: 10px;
+  border: 2px solid white;
 }
 
 /*# sourceMappingURL=style.css.map */
