--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ main {
   display: flex;
   align-items: center;
   margin-bottom: 5%;
-  height: 300px;
+  height: 302px;
   background: rgba(187, 27, 27, 0.4);
   -webkit-box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.3);
   box-shadow: 0px 0px 50px 25px rgba(51, 51, 51, 0.3);
@@ -148,8 +148,13 @@ main {
   background-color: black;
   width: 173px;
   color: #fff;
-  border-radius: 10px;
-  border: 2px solid white;
+  border-radius: 5px;
+  border: 2px solid transparent;
+}
+.projet .lienProjet:hover {
+  background: rgba(225, 225, 225, 0);
+  border: 2px solid #fff;
+  color: #fff;
 }
 
 @media screen and (max-width: 1230px) {
