--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-image: url("./media/back.jpg");
+    background-image: url("./assets/back.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
