--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-image: url("./media/back.jpg");
+  background-image: url("./assets/back.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
