--- a/sass/style.scss
+++ b/sass/style.scss
@@ -182,6 +182,21 @@ main {
     }
 }
 
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: black;
+    height: 200px;
+}
+.parentCitation{
+    color: #fff;
+    .citation {
+        padding: 2% 5% 2% 5%;
+    }
+}
+
 @media screen and (max-width: 1230px) {
 
 
