--- a/style.css
+++ b/style.css
@@ -162,7 +162,6 @@ footer {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background: black;
   height: 200px;
 }
 
@@ -174,7 +173,7 @@ footer {
 }
 
 @media screen and (max-width: 1230px) {
-  main {
+  .mainProjet {
     flex-direction: column;
     align-items: center;
   }
