--- a/sass/style.scss
+++ b/sass/style.scss
@@ -86,19 +86,30 @@ body {
     flex-direction: column;
     align-items: center;
 
+  
+
     .boutonEmail {
 
         text-align: center;
         width: 260px;
         margin-bottom: 2%;
         border-radius: 10px;
-        border: 2px solid #ffff;
+        border: 2px solid black;
         padding: 9% 7%;
-
+        background-color: black;
         color: #ffff;
         font-weight: 500;
         font-size: 22px;
     }
+  
+}
+.liensContact{
+    .boutonEmail:hover {
+        background: #e1e1e100;
+        border: 2px solid #FFF;
+        color: #fff;
+}
+    
 }
 
 
@@ -187,11 +198,13 @@ footer {
     align-items: center;
     justify-content: center;
     text-align: center;
+    background:rgba(0, 0, 0, 0.3);
    
     height: 200px;
 }
 .parentCitation{
     color: #fff;
+    
     .citation {
         padding: 2% 5% 2% 5%;
     }
